# food_reader

./: .gitignore  LOGGING_GUIDE.md  README.md  description.md  hello.py  implementation_plan.md  logger_implementation_spec.md  logging_implementation_plan.md  logging_implementation_summary.md  logging_integration_guide.md  logging_quick_reference.md  pyproject.toml
calorie-tracker/: .env.example  Dockerfile  Makefile.local  README.md  docker-compose.local.yml  docker-compose.yml  nginx.conf  requirements.txt
calorie-tracker/backend/: .env.example
calorie-tracker/backend/app/: ai_analyzer.py  auth.py  crud.py  database.py  deps.py  logger.py  main.py  models.py  schemas.py  settings.py  test_logger.py
calorie-tracker/backend/app/routers/: auth_router.py  meals_router.py  users_router.py
calorie-tracker/frontend/: app.js  charts.js  common.js  history.html  imageOptimizer.js  index.html  login.html  metrics.html  styles.css  test-bottom-navbar.html  test-image-optimizer.html  test-mobile-filters.html  test-mobile-navbar.html  test-navbar.html
calorie-tracker/frontend/assets/favicon/: README-SPLASH-SCREEN.md  generate-favicons.js  generate-splash-icons.html  generate-splash-icons.js  generate.html  site.webmanifest
